--- a/pages/index.html
+++ b/pages/index.html
@@ -3,22 +3,27 @@
 
 {% block content %}
   <div class='outer clearfix'>
-    <div class="px3 max-width-4 mx-auto">
+    <div class="px3 max-width-5 mx-auto">
 
       <div class="clearfix">
-        <div class="col col-12 md-col-4 mt4">
-          <img class='logo-spin fit' src='https://media.giphy.com/media/3ohhwnYDRVsRxa9yx2/giphy.gif' />
+        <div class="col col-12 md-col-5 mt4 xs-hide sm-hide bg-navy">
+          <img class='logo-spin fit' src='https://media.giphy.com/media/26FLdaDQ5f72FPbEI/giphy.gif' />
+          <p class='white mb2 px2'>By Libby VanderPloeg via Giphy</p>
+          <p class='white mb2 px2'>
+There’s the drink-a-bottle-of-pinot-during-the-day type 🍷; the off hours reader 📚; the cosy kitchen baker; the herbal lover 🌿; the face mask enthusiast, etc. Whatever your winter survival strategy, we got the goods to make any freeze cosy, chill, and hella fun.
+          </p>
         </div>
-        <div class="col md-col-8 mt4">
-          <div class='clearfix'>
-            <div class='col col-7 pad-me'>
+
+        <div class="col col-12 md-col-7 mt4">
+          <div class='clearfix flex'>
+            <div class='col md-col-7 pad-me'>
               <img class='fit mb2' src='static/images/logo.svg' />
             </div>
-            <div class='col col-5 pl3'>
-              <p class='blue mb2'>
-                Whether you like to drink it, smoke it, eat it, or rub it on your face—we’ve got everything you (or your lady friend!) need to experience your green with high style. Consider it your summer survival pack.
-              </p>
+            <div class='col col-12 md-col-5 pl3 flex items-end xs-hide sm-hide'>
             </div>
+          </div>
+
+          <div class='clearfix'>
             <form id="mailchimp-form" class='mt2 pad-me'>
               <input type="email" placeholder='Enter Your Email to Win' />
               <button type="submit">ENTER</button>
@@ -28,104 +33,79 @@
         </div>
       </div>
 
-      <div class="clearfix mb1">
+      <div class="clearfix mb1 mt3">
         <div class="col col-12 mb2"><h6 class='prompt blue mt0 mb1'>The winner takes home:</h6></div>
 
         <!-- Product -->
-        <a href='http://www.paperclippottery.com' target='_blank' class="product col col-12 sm-col-6 md-col-4 mb3">
-          <div class='copy ml2'>
-            <h3 class='mb1'>Paperclip Pottery</h3>
-            <h5 class='mt0'>Wake & Bake Ceramic Mug & Pipe</h5>
+        <a href='https://comingsoonnewyork.com/' target='_blank' class="product col col-12 sm-col-6 md-col-3 mb3">
+          <div class='copy px3'>
+            <h3 class='mb1'>Coming Soon</h3>
+            <h5 class='mt0'>Gift Voucher</h5>
           </div>
-          <div class='flag ml2'>
-            <div class='flag-inner'>
-              <h4 class='m0'>Valued At</h4>
-              <h2 class='m0'>$120</h2>
-            </div>
+          <img class='fit' src='static/images/brands/coming.jpg' />
+        </a>
+        <a href='https://www.shop-tetra.com/' target='_blank' class="product col col-12 sm-col-6 md-col-3 mb3">
+          <div class='copy px3'>
+            <h3 class='mb1'>Tetra Shop</h3>
+            <h5 class='mt0'>Gift Voucher</h5>
           </div>
-          <img class='fit' src='static/images/paperclip.jpg' />
+          <img class='fit' src='static/images/brands/tetra.jpg' />
+        </a>
+        <a href='https://www.capbeauty.com/collections/all#' target='_blank' class="product col col-12 sm-col-6 md-col-3 mb3">
+          <div class='copy px3'>
+            <h3 class='mb1'>Cap Beauty</h3>
+            <h5 class='mt0'>Daily Hit</h5>
+          </div>
+          <img class='fit' src='static/images/brands/cap.jpg' />
+        </a>
+        <a href='http://www.paperclippottery.com' target='_blank' class="product col col-12 sm-col-6 md-col-3 mb3">
+          <div class='copy px3'>
+            <h3 class='mb1'>Baking Supply Co.</h3>
+            <h5 class='mt0'>Box & Open Mitts</h5>
+          </div>
+          <img class='fit' src='static/images/brands/bsco.jpg' />
+        </a>
+
+        <!-- -->
+        <a href='https://www.instagram.com/gossamer/' target='_blank' class="product col col-12 sm-col-6 md-col-3 mb3">
+          <div class='copy px3'>
+            <h3 class='mb1'>Gossamer</h3>
+            <h5 class='mt0'>Yearly Subscription</h5>
+          </div>
+          <img class='fit' src='static/images/brands/goss.jpg' />
+        </a>
+        <a href='http://www.paperclippottery.com' target='_blank' class="product col col-12 sm-col-6 md-col-3 mb3">
+          <div class='copy px3'>
+            <h3 class='mb1'>[reads]</h3>
+            <h5 class='mt0'>Kids & Adults Box</h5>
+          </div>
+          <img class='fit' src='static/images/brands/reads.jpg' />
+        </a>
+        <a href='https://www.levooil.com/' target='_blank' class="product col col-12 sm-col-6 md-col-3 mb3">
+          <div class='copy px3'>
+            <h3 class='mb1'>LEVO</h3>
+            <h5 class='mt0'>Rose Gold Unit</h5>
+          </div>
+          <img class='fit' src='static/images/brands/levo.jpg' />
+        </a>
+        <a href='https://pineapplecollaborative.com/' target='_blank' class="product col col-12 sm-col-6 md-col-3 mb3">
+          <div class='copy px3'>
+            <h3 class='mb1'>Pineapple DC</h3>
+            <h5 class='mt0'>Two free event passes + food hamper</h5>
+          </div>
+          <img class='fit' src='static/images/brands/pineapple.jpg' />
         </a>
 
         <!-- Product (LEVO) -->
-        <a href='https://www.levooil.com' target='_blank' class="product col col-12 sm-col-6 md-col-4 mb3">
-          <div class='copy ml2'>
-            <h3 class='mb1'>LEVO</h3>
-            <h5 class='mt0'>Electronic Oil Infuser</h5>
-          </div>
-          <div class='flag ml2'>
-            <div class='flag-inner'>
-              <h4 class='m0'>Valued At</h4>
-              <h2 class='m0'>$199</h2>
-            </div>
-          </div>
-          <img class='fit' src='static/images/levo.jpg' />
-        </a>
-
         <!-- Product (Dame) -->
-        <a href='https://www.dameproducts.com' target='_blank' class="product col col-12 sm-col-6 md-col-4 mb3">
-          <div class='copy ml2'>
-            <h3 class='mb1'>Dame Products</h3>
-            <h5 class='mt0'>Finger Vibrator</h5>
-          </div>
-          <div class='flag ml2'>
-            <div class='flag-inner'>
-              <h4 class='m0'>Valued At</h4>
-              <h2 class='m0'>$75</h2>
-            </div>
-          </div>
-          <img class='fit' src='static/images/dame.jpg' />
-        </a>
-
         <!-- Product -->
-        <a href='http://www.ascheindustries.com' target='_blank' class="product col col-12 sm-col-6 md-col-4 mb3">
-          <div class='copy ml2'>
-            <h3 class='mb1'>ASCHE</h3>
-            <h5 class='mt0'>Green Kush Pouchette</h5>
-          </div>
-          <div class='flag ml2'>
-            <div class='flag-inner'>
-              <h4 class='m0'>Valued At</h4>
-              <h2 class='m0'>$185</h2>
-            </div>
-          </div>
-          <img class='fit' src='static/images/asche.jpg' />
-        </a>
-
         <!-- Product -->
-        <a href='http://www.bakingsupply.co' target='_blank' class="product col col-12 sm-col-6 md-col-4 mb3">
-          <div class='copy ml2'>
-            <h3 class='mb1'>The Baking Supply Co</h3>
-            <h5 class='mt0'>Recipe Box, Iron on Patch & Custom Grinder</h5>
-          </div>
-          <div class='flag ml2'>
-            <div class='flag-inner'>
-              <h4 class='m0'>Valued At</h4>
-              <h2 class='m0'>$90</h2>
-            </div>
-          </div>
-          <img class='fit' src='static/images/bsco.jpg' />
-        </a>
-
         <!-- Product -->
-        <a href='http://www.vanderpop.com/' target='_blank' class="product col col-12 sm-col-6 md-col-4 mb3">
-          <div class='copy ml2'>
-            <h3 class='mb1'>Van der Pop</h3>
-            <h5 class='mt0'>Body Oil, Joint Card, Gold Poker & Stash Jars</h5>
-          </div>
-          <div class='flag ml2'>
-            <div class='flag-inner'>
-              <h4 class='m0'>Valued At</h4>
-              <h2 class='m0'>$120</h2>
-            </div>
-          </div>
-          <img class='fit' src='static/images/vdp.jpg' />
-        </a>
-
       </div>
     </div>
 
     <div class='clearfix'>
-      <div class="col col-12 mb3 center">
+      <div class="col col-12 mb4 center">
         <h3 class='autofocus blue underline pointer'>Enter Now to Win!</h3>
         <p class='blue pad-me'>By entering the sweepstakes, I agree that I am over 18+. I also agree to receive email communication and special offers from the featured brands.</p>
       </div>
